# cu

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  .rumdl.toml  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Dockerfile  Doxyfile  Makefile  README.md  SECURITY.md  autotune_config.json  compose.yml  package.json  test_autotune_cache.json
.github/workflows/: benchmark.yml  ci.yml  docker.yml  release.yml  testing-quality.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  v2.0-MILESTONE-AUDIT.md  v2.1-MILESTONE-AUDIT.md  v2.11-MILESTONE-AUDIT.md  v2.12-MILESTONE-AUDIT.md  v2.13-MILESTONE-AUDIT.md  v2.14-MILESTONE-AUDIT.md  v2.15-MILESTONE-AUDIT.md  v2.5-MILESTONE-AUDIT.md  v2.7-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v1.2-REQUIREMENTS.md  v1.2-ROADMAP.md  v1.6-REQUIREMENTS.md  v1.6-ROADMAP.md  v2.12-ROADMAP.md  v2.14-ROADMAP.md  v2.3-REQUIREMENTS.md  v2.3-ROADMAP.md  v2.7-REQUIREMENTS.md  v2.7-ROADMAP.md  v2.8-MILESTONE-AUDIT.md  v2.8-ROADMAP.md  v2.8-STATE.md
.planning/phases/: REVIEWS.md
.planning/research/: ARCHITECTURE.md  ARCHITECTURE_v2.4.md  FEATURES.md  PITFALLS.md  STACK.md  (+2 more)
benchmark/: VERIFICATION.md  benchmark_kernels.cu
cmake/: FindNCCL.cmake
data/: test_patterns.cuh
docs/: ARCHITECTURE.md  CHANGELOG_v2.7.md  PERFORMANCE_TOOLING.md  PRODUCTION.md  QUANTIZATION.md  SPARSE.md  build-performance.md  ide-setup.md
examples/: README.md
include/: cuda_preinclude.h  cuda_utils.h  reduce.h
src/: gaussian_blur.cu  main.cpp  matrix_mult.cu  reduce.cu  sobel_edge.cu  sort.cu
tests/: CMakeFuzz.txt  CMakeLists.txt  algo_sort_test.cu  algorithm_registry_test.cpp  brightness_test.cu  convolution_test.cu  cublas_context_test.cu  degrade_test.cpp  device_info_test.cpp  error_context_test.cpp  error_handling_integration_test.cpp  gaussian_blur_test.cu  histogram_test.cu  image_utils_test.cu  matrix_mult_test.cu  matrix_ops_test.cu  memory_metrics_test.cpp  memory_pool_metrics_test.cpp  memory_pool_test.cpp  morphology_test.cu  pinned_memory_test.cpp  reduce_test.cu  retry_test.cpp  scan_test.cu  sobel_edge_test.cu  sort_test.cu  stream_event_test.cpp  stream_manager_test.cpp  test_patterns_test.cpp  timeout_error_category_test.cpp  timeout_propagation_test.cpp  timeout_test.cpp
tests/algo/: flash_attention_edge_test.cu  flash_attention_test.cu  sample_sort_test.cpp  segmented_sort_test.cpp  spmv_test.cpp  sssp_test.cpp
tests/benchmark/: throughput_test.cpp
tests/cuda/nccl/: test_nccl_collectives.cpp
tests/distributed/: distributed_matmul_test.cu  distributed_ops_test.cu  distributed_pool_test.cu
tests/fuzz/: README.md  algorithm_fuzz.cpp  fuzz_utils.hpp  matmul_fuzz.cpp  memory_pool_fuzz.cpp
tests/gnn/: gnn_test.cpp
tests/graph/: bfs_test.cpp
tests/inference/: beam_search_test.cpp  block_manager_edge_test.cpp  integration_test.cpp  scheduler_edge_test.cpp  speculative_decoding_test.cpp
tests/memory/: attention_sink_test.cpp  fragmentation_test.cpp  kv_cache_allocator_edge_test.cpp  kv_cache_allocator_test.cpp  prefix_sharing_test.cpp  streaming_cache_test.cpp
tests/memory_opt/: memory_optimizer_test.cpp
tests/mesh/: device_mesh_test.cu
tests/neural/: activations_test.cpp  layer_norm_test.cpp  matmul_test.cpp  softmax_test.cpp  sync_batch_norm_test.cu  tensor_parallel_test.cpp
tests/neural/fusion/: fused_matmul_bias_act_test.cpp
tests/neural/optimizers/: optimizers_test.cpp
tests/observability/: kernel_stats_test.cpp
tests/performance/: CMakeLists.txt  autotuner_test.cu  bandwidth_analysis_test.cpp  dashboard_test.cpp  fusion_analyzer_test.cpp  integration_test.cpp  nvblox_metrics_test.cpp  profiler_test.cpp
tests/pipeline/: pipeline_test.cpp
tests/production/: graph_executor_test.cu  performance_test.cpp  stress_test.cpp
tests/property/: README.md  mathematical_tests.cpp
tests/quantize/: calibrator_test.cpp  fp8_gemm_test.cpp  fp8_types_test.cpp  int8_kernels_test.cpp  qat_test.cpp
tests/sparse/: cusparse_test.cpp  ilu_preconditioner_test.cpp  integration_test.cpp  krylov_gpu_test.cpp  krylov_test.cpp  matrix_test.cpp  preconditioned_solver_test.cpp  preconditioner_benchmark_test.cpp  preconditioner_test.cpp  reordering_test.cpp  sparse_matrix_test.cpp
tests/testing/: integration_test.cpp  robustness_test.cpp
tests/tools/: tools_test.cpp
(+565 files in other folders)
